--- a/.github/workflows/self-hosted-runner.yml
+++ b/.github/workflows/self-hosted-runner.yml
@@ -23,8 +23,4 @@ jobs:
 
     - name: Deploy
       run:
-          cd ~/actions-runner/_work/sample-node-project/sample-node-project && git pull && npm install && pm2 restart your-app
-      env:
-        SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}  # Use GitHub Secrets for SSH keys
-        SSH_HOST: ${{ secrets.SSH_HOST }}
-        SSH_USER: ${{ secrets.SSH_USER }}
+          cd ~/actions-runner/_work/sample-node-project/sample-node-project && git pull && npm install && pm2 restart app.js
